fix alignment issues

--- a/src/components/Menu/Menu.css
+++ b/src/components/Menu/Menu.css
@@ -1,5 +1,5 @@
 nav {
-  padding-top: 5px;
+  padding-top: 2.5px;
   height: 100vh;
   width: 20vw;
   min-width: 200px;
@@ -19,7 +19,7 @@ nav h1 {
   display: flex;
   justify-content: center;
   align-items: center;
-  margin-bottom: 45px;
+  margin-bottom: 30px;
 }
 
 nav ul {
