--- a/src/components/SearchForm/SearchForm.css
+++ b/src/components/SearchForm/SearchForm.css
@@ -1,5 +1,5 @@
 .search-field-container {
-  padding-top: 5px;
+  padding-top: 7.5px;
   height: 10vh;
   min-height: 50px;
   display: flex;
